<resources>
    <string name="app_name">HelloLang</string>
    <string name="Feed_activity_name">HelloLang Feed</string>
    <string name="FilterChooser_activity_name">User Filters</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="mandarin">Mandarin</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="filter_users_button">Filter Users</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="language_selector">Language:</string>
    <string name="type_selector">User Type:</string>
    <string name="status_selector">Status:</string>
    <string name="none_item">None</string>
    <string name="clear_filters_button">Clear Filters</string>
    <string name="apply_filters_button">Apply Filters</string>
    <string name="default_username">:username:</string>
    <string name="default_language">:language:</string>
    <string name="default_status">:status:</string>
    <string name="default_type">:type:</string>
    <string name="default_picture">:profile_picture:</string>

    <string-array name="languages">
        <item>@string/none_item</item>
        <item>@string/english</item>
        <item>@string/spanish</item>
        <item>@string/french</item>
        <item>@string/mandarin</item>
    </string-array>
    <string-array name="types">
        <item>@string/none_item</item>
        <item>@string/teacher</item>
        <item>@string/student</item>
    </string-array>
    <string-array name="statuses">
        <item>@string/none_item</item>
        <item>@string/online</item>
        <item>@string/offline</item>
    </string-array>

</resources>
