<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/default_picture"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_toRightOf="@+id/profile_picture"
        android:text="@string/default_username"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/spoken_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_toRightOf="@+id/profile_picture"
        android:text="@string/default_language"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/profile_picture"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_toRightOf="@+id/profile_picture"
        android:text="@string/default_status"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/type_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/default_type"
        android:textSize="22sp" />

</RelativeLayout>