<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:label="@string/FilterChooser_activity_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jackah2.hellolangfeed.FilterChooser">

    <TextView
        android:id="@+id/language_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Language:"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/language_select_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/language_select_text" />

    <TextView
        android:id="@+id/user_type_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/language_select_spinner"
        android:text="User Type:"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/user_type_select_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_type_select_text" />

    <TextView
        android:id="@+id/status_select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/user_type_select_spinner"
        android:text="Status:"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/status_select_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/status_select_text" />

    <Button
        android:id="@+id/clear_filters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/apply_filters_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/clear_filters_button" />

    <Button
        android:id="@+id/apply_filters_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/apply_filters_button" />
</RelativeLayout>
